# noterat

./: .gitignore  makefile  pyproject.toml
noterat/: __main__.py  db.py  noterat.py
noterat/noterat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
