[project]
name = "noterat"
version = "0.1.0"
description = "A minimal note taking CLI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "ruff>=0.11.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
noterat = "noterat.noterat:cli"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
